feat: implement lobby screen with room creation and player list

--- a/frontend/src/pages/playerstats.html
+++ b/frontend/src/pages/playerstats.html
@@ -28,5 +28,7 @@
             <div class="p2"></div>
         </div>
         <!-- <div id="tempdiv"></div> -->
+        <script type="module" src="/frontend/src/transitions.js"></script>
+        <script type="module" src="/frontend/src/pages/playerstats.js"></script>
     </body>
 </html>
