feat: integrate socket.io for multiplayer sync

--- a/frontend/src/pages/leaderboards.html
+++ b/frontend/src/pages/leaderboards.html
@@ -2,8 +2,12 @@
     <meta charset="utf8" />
     <head>
         <title>Pathless Trails</title>
+        <link rel="stylesheet" href="/frontend/src/pages/leaderboards.css" />
+        <link rel="stylesheet" href="/frontend/src/reset.css" />
+        <link rel="icon" type="image/png" href="/assets/star.png" />
     </head>
     <body class="preload">
+        <div class="backbtn"><img src="/assets/other/back2.svg" alt="Back" /></div>
         <div class="page">
             <h1 class="header">Leaderboards</h1>
             <div class="players">
@@ -24,6 +28,7 @@
         </div>
         <!-- <div class="temp" id="tempdiv"></div> -->
         <script type="module" src="/frontend/src/transitions.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script type="module" src="/frontend/src/pages/leaderboards.js"></script>
     </body>
 </html>
