--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Pathless Trails</title>
+        <link rel="stylesheet" href="/frontend/src/pages/home.css" />
+        <link rel="stylesheet" href="/frontend/src/reset.css" />
+        <link rel="icon" type="image/png" href="/assets/star.png" />
     </head>
     <body class="preload">
         <div class="page">
@@ -21,5 +24,8 @@
                 </div>
             </div>
         </div>
+        <script type="module" src="/frontend/src/transitions.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script type="module" src="/frontend/src/pages/home.js"></script>
     </body>
 </html>
